# mail-linear-flutter

./: .gitattributes  .gitignore  README.md  REFERENCES.md
.kiro/specs/mail-alias-fetch-bug/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/steering/: power-flutter-dev.md  power-impeccable-design.md
docs/: mail-api-contract.md  native-backend-migration.md
mail_linear_flutter/: .gitignore  README.md  pubspec.yaml
mail_linear_flutter/lib/: main.dart
mail_linear_flutter/lib/app/: app_state.dart  app_state_accounts.dart  app_state_claw_mail.dart  app_state_mail_followup.dart  app_state_mail_navigation.dart  app_state_outlook_mail.dart  app_state_settings.dart  mail_linear_app.dart
mail_linear_flutter/lib/core/api/: local_api_controller.dart  mail_api.dart  mail_fetch_result.dart
mail_linear_flutter/lib/core/localization/: app_language.dart  app_localizations.dart  app_strings_ja_en.dart  app_strings_ko.dart  app_strings_zh.dart  app_ui_map_en.dart  app_ui_map_ja.dart  app_ui_map_ko.dart  app_ui_map_zh_hant.dart
mail_linear_flutter/lib/core/models/: dashboard_stats.dart  mail_account.dart  mail_item.dart
mail_linear_flutter/lib/core/motion/: motion_tokens.dart
mail_linear_flutter/lib/core/platform/: sound_service.dart  (+1 more)
mail_linear_flutter/test/: mail_api_model_test.dart  widget_test.dart
mail_linear_flutter/windows/: CMakeLists.txt
mail_linear_flutter/windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  win32_window.cpp
native-mail-api/: Cargo.toml
native-mail-api/src/: main.rs
scripts/: package-flutter-release.ps1
(+32 files in other folders)
