[package]
name = "outlook-mail-native"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"
chrono = "0.4"
getrandom = "0.3"
mailparse = "0.16"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
url = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
